--- a/Tugas CV/index.html
+++ b/Tugas CV/index.html
@@ -20,8 +20,8 @@
                 <div class="contact-box">
                     <h2>Contact</h2>
                     <div>
-                        <i class="fas fa-phone-alt"></i>
-                        <div class="text"> (+62) 89537268801</div> 
+                            <i class="fas fa-phone-alt"></i>
+                            <div class="text"> (+62) 89537268801</div> 
                         </div>
                         <div> 
                             <i class="fas fa-home"></i>
@@ -41,15 +41,15 @@
                             <h2> Languages </h2>
                                 <p>English</p>
                                 <div>
-                                <div class="dot active"></div>
-                                <div class="dot active"></div>
-                                <div class="dot active"></div>
-                                <div class="dot active"></div>
-                                <div class="dot active"></div>
-                                <div class="dot active"></div>
-                                <div class="dot active"></div>
-                            </div>
-                        <div>
+                                    <div class="dot active"></div>
+                                    <div class="dot active"></div>
+                                    <div class="dot active"></div>
+                                    <div class="dot active"></div>
+                                    <div class="dot active"></div>
+                                    <div class="dot active"></div>
+                                    <div class="dot active"></div>
+                                </div>
+                                <div>
                             <p> Mandarin</p>
                                 <div class="dot active"></div>
                                 <div class="dot active"></div>
@@ -80,13 +80,14 @@
             <div class="card-two">
 
                 <div class="head-title">
-                    <h1>Jenny
+                    <h1>Jenny<br>
                         <b>Phiong</b>
                     </h1>
                 </div>
-                 <div>
+                 <div class="programmer-title">
                     <h2>Programmer</h2>
                 </div>
+                
                 <div class="group-1">
                     <div class="box">
                         <h2>AboutMe</h2>
