--- a/Tugas CV/index.html
+++ b/Tugas CV/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
+    <title>Jenny's CV</title>
     <link rel="stylesheet" href="style.css">
     <script src="fontawesome/js/all.js"></script>
 </head>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="desk">
                     <p></p>
-                </div>Hi, I'm Jenny, a student at UNTAR majoring in Computer Engineering. I'm a tech enthusiast with a knack for turning complex problems into simple solutions—and I always add a dash of humor. Whether I'm debugging code or cracking jokes, I bring a mix of creativity and tech-savvy to everything I do.
+                </div> Hi, I'm Jenny, a student at UNTAR majoring in Computer Engineering. I'm a tech enthusiast with a knack for turning complex problems into simple solutions—and I always add a dash of humor. Whether I'm debugging code or cracking jokes, I bring a mix of creativity and tech-savvy to everything I do.
             </div>
 
             <div class="group-2">
